--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -21,7 +21,10 @@
             li {
                 margin: 0 12px;
                 a:hover {
-                    color: $primary; //TODO 
+                    color: $primary; 
+                }
+                & .active {
+                    color: $primary;
                 }
             }
         }
